# graphify

./: .gitignore  ARCHITECTURE.md  BRANCH.md  CHANGELOG.md  PLAN.md  README.ja-JP.md  README.md  README.zh-CN.md  UPSTREAM_GAP.md  handover.md  package-lock.json  package.json  pyproject.toml  tsconfig.json  tsup.config.ts  uat-c-server.ts  vitest.config.ts
.graphify/: GRAPH_REPORT.md  branch.json  graph.html  graph.json  worktree.json
.track/: events.jsonl  head.json
docs/: mystery-knowledge-graph.html
graphify/: __init__.py  __main__.py  analyze.py  benchmark.py  build.py  cache.py  cluster.py  detect.py  export.py  extract.py  hooks.py  ingest.py  report.py  serve.py  skill-aider.md  skill-claw.md  skill-codex.md  skill-copilot.md  skill-droid.md  skill-opencode.md  skill-trae.md  skill-windows.md  skill.md  transcribe.py  validate.py  watch.py
plan/: 06-BRANCH_WP6_PLATFORM_PARITY.md
py/: README.md  pyproject.toml
scripts/: assert-studio-app.mjs  build-studio-app.mjs  build-studio-demo.mjs  build-studio-multimodel.mjs  copy-studio-app.mjs  gen-st-tokens.mjs  preuat-reconciliation.sh  smoke-test.sh  sync-graph-dist.mjs
spec/: SPEC_AGENTSTATS_TIMEORIENTED.md  SPEC_CITATIONS.md  SPEC_CODE_REVIEW_GRAPH_ALIGNMENT.md  SPEC_CODE_REVIEW_GRAPH_OPPORUNITY.md  SPEC_CONDUCTOR_HARNESS.md  SPEC_ENTITY_VISIBILITY_STATES.md  SPEC_EVOL_CURATED_RESPONSES.md  SPEC_EVOL_REPOWISE_OPPORTUNITIES.md  SPEC_EVOL_TARGET_CONFIGURATION_QA.md  SPEC_EVOL_WP6_PLATFORM_PARITY.md  SPEC_GAPHIFY_SLDC_STUDY.md  SPEC_GITFLOW_LABELS.md  SPEC_GITFLOW_VIEW.md  SPEC_GRAPHIFY.md  (+31 more)
src/: analyze.ts  (+123 more)
(+520 files in other folders)
