[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "graphify"
version = "0.1.1"
requires-python = ">=3.10"
dependencies = [
    "networkx",
    "graspologic",
    "pyvis",
    "tree-sitter",
    "tree-sitter-python",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["graphify*"]
