[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "graphify"
version = "0.1.1"
description = "Turn any codebase, docs, or images into a queryable knowledge graph"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "networkx",
    "graspologic",
    "pyvis",
    "tree-sitter",
    "tree-sitter-python",
    "tree-sitter-javascript",
    "tree-sitter-typescript",
    "tree-sitter-go",
    "tree-sitter-rust",
    "tree-sitter-java",
    "tree-sitter-c",
    "tree-sitter-cpp",
    "tree-sitter-ruby",
    "tree-sitter-c-sharp",
    "tree-sitter-kotlin",
    "tree-sitter-scala",
    "tree-sitter-php",
]

[project.optional-dependencies]
mcp = ["mcp"]
neo4j = ["neo4j"]
pdf = ["pypdf", "html2text"]
watch = ["watchdog"]
all = ["mcp", "neo4j", "pypdf", "html2text", "watchdog"]

[project.scripts]
graphify = "graphify.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["graphify*"]

[tool.setuptools.package-data]
graphify = ["skill.md"]
